--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "drizzle-orm": "^0.44.4",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "geist": "^1.3.1",
@@ -68,6 +69,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.31.4",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
